Balanced ages and unbalanced gender and ability in groups

--- a/participants.ipynb
+++ b/participants.ipynb
@@ -6,13 +6,12 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-02T09:58:30.600755Z",
-     "start_time": "2024-12-02T09:58:30.421488Z"
+     "end_time": "2024-12-06T05:47:32.551165Z",
+     "start_time": "2024-12-06T05:47:32.418943Z"
     }
    },
    "source": [
     "import pandas as pd\n",
-    "import random\n",
     "\n",
     "# Load the dataset\n",
     "df = pd.read_csv('data/dashboard-export-02-51-am-2024-11-30.csv')\n",
@@ -32,214 +31,131 @@
     "    'Prefer not to say': 9  # Handle 'Prefer not to say' category\n",
     "}\n",
     "\n",
+    "age_brackets = ['16-24', '25-34', '35-44', '45-54', '55-64', '65-74', '75-84', '85+']\n",
+    "\n",
     "# Apply the mapping to the 'Age' column\n",
     "df['Age_Num'] = df['Q26 - Age: *'].map(age_map)\n",
     "\n",
     "# Number of groups you want to create\n",
-    "num_groups = 9\n",
+    "num_groups = 4\n",
+    "\n",
+    "# Number of people in each group\n",
+    "group_size = 5\n",
+    "\n",
+    "df[\"Group_Num\"] = \"None\"\n",
     "\n",
     "# Create empty groups\n",
     "groups = {i: [] for i in range(num_groups)}\n",
     "\n",
-    "# Handle the 'Prefer not to say' category separately\n",
-    "no_response = df[df['Q26 - Age: *'] == 'Prefer not to say']\n",
-    "other_data = df[df['Q26 - Age: *'] != 'Prefer not to say']\n",
+    "current_group = 0\n",
+    "current_age = 1 # Skip under 16s\n",
+    "# For each group, add the youngest person until the groups are full\n",
+    "# Results in spread of ages in each group (16-24 is added to group 0, then group 1, etc)\n",
+    "for i in range(len(age_map)):\n",
+    "    for _, row in df.iterrows():\n",
+    "        if row['Age_Num'] == current_age and len(groups[current_group]) < group_size:\n",
+    "            row['Group_Num'] = current_group # Assign group number\n",
+    "            groups[current_group].append(row) # Add person to group\n",
+    "            current_group = (current_group + 1) % num_groups\n",
     "\n",
-    "# Shuffle the entire dataset (we can include 'Prefer not to say' individuals here as well)\n",
-    "df_shuffled = pd.concat([other_data, no_response]).sample(frac=1).reset_index(drop=True)\n",
+    "    current_age = current_age + 1\n",
     "\n",
-    "# Create a dictionary to store individuals by age and gender\n",
-    "age_gender_dict = {}\n",
-    "for _, row in df_shuffled.iterrows():\n",
-    "    age = row['Q26 - Age: *']\n",
-    "    gender = row['Q27 - Gender: *']\n",
-    "    \n",
-    "    if (age, gender) not in age_gender_dict:\n",
-    "        age_gender_dict[(age, gender)] = []\n",
-    "    \n",
-    "    age_gender_dict[(age, gender)].append(row)\n",
-    "\n",
-    "# Distribute individuals across groups\n",
-    "for age_gender, individuals in age_gender_dict.items():\n",
-    "    age, gender = age_gender\n",
-    "    group_size = len(individuals)\n",
-    "    \n",
-    "    # Distribute one person from each demographic into each group, one by one\n",
-    "    for i, person in enumerate(individuals):\n",
-    "        group_id = i % num_groups  # Ensure people are distributed evenly\n",
-    "        groups[group_id].append(person)\n",
-    "\n",
-    "# Print the final groups and demographic counts\n",
-    "for group_id, group in groups.items():\n",
-    "    print(f\"Group {group_id + 1}:\")\n",
-    "    \n",
-    "    # Convert list of rows back to a DataFrame\n",
-    "    group_df = pd.DataFrame(group)\n",
-    "    \n",
-    "    # Count the demographics for this group\n",
-    "    age_counts = group_df['Q26 - Age: *'].value_counts()\n",
-    "    gender_counts = group_df['Q27 - Gender: *'].value_counts()\n",
-    "    \n",
-    "    print(\"  Age Distribution:\")\n",
-    "    for age, count in age_counts.items():\n",
-    "        print(f\"    {age}: {count}\")\n",
-    "    \n",
-    "    print(\"  Gender Distribution:\")\n",
-    "    for gender, count in gender_counts.items():\n",
-    "        print(f\"    {gender}: {count}\")\n",
-    "    \n",
-    "    # Print the people in the group\n",
-    "    for _, person in group_df.iterrows():\n",
-    "        fname = person['Q29 - First name: *']  # First name column\n",
+    "# Print the people in each group\n",
+    "for group_num, group_members in groups.items():\n",
+    "    print(f\"Group {group_num}:\")\n",
+    "    for person in group_members:\n",
+    "        fname = person['Q29 - First name: *']\n",
     "        lname = person['Q30 - Last name: *']\n",
-    "        age = person['Q26 - Age: *']  # Age column\n",
-    "        gender = person['Q27 - Gender: *']  # Gender column\n",
-    "        \n",
+    "        age = person['Q26 - Age: *']\n",
+    "        gender = person['Q27 - Gender: *']\n",
+    "\n",
     "        print(f\"  {fname} {lname}, {age}, {gender}\")\n",
-    "    \n",
-    "    print()\n"
+    "\n",
+    "    # Show demographics in group\n",
+    "    group_df = pd.concat(group_members) # Convert to Pandas series to perform calc\n",
+    "    print((group_df['Q27 - Gender: *'].value_counts(normalize=True) * 100).to_string(index=True))\n",
+    "    print((group_df['Q26 - Age: *'].value_counts(normalize=True).reindex(age_brackets, fill_value=0) * 100).to_string(index=True)) # Include missing ages\n",
+    "    print()  # Add a blank line between groups\n",
+    "\n",
+    "unassigned = df[df['Group_Num'] == \"None\"]\n"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Group 1:\n",
-      "  Age Distribution:\n",
-      "    65-74: 3\n",
-      "    55-64: 2\n",
-      "    45-54: 2\n",
-      "    75-84: 2\n",
-      "    35-44: 2\n",
-      "    85+: 1\n",
-      "    16-24: 1\n",
-      "    Under 16: 1\n",
-      "    25-34: 1\n",
-      "  Gender Distribution:\n",
-      "    Male: 8\n",
-      "    Female: 7\n",
-      "  Lewis McDuff, 85+, Male\n",
-      "  Ashok Harridaw, 45-54, Male\n",
-      "  Mary White, 65-74, Female\n",
-      "  Graham Brighting, 75-84, Male\n",
-      "  Lauren Bradley, 35-44, Female\n",
-      "  Pieter van Deventer, 65-74, Male\n",
-      "  Grant McLean, 65-74, Male\n",
-      "  liz Anderson, 55-64, Female\n",
-      "  Shane Eastergaard, 55-64, Male\n",
+      "Group 0:\n",
       "  Amber Fort, 16-24, Female\n",
-      "  Nicola Mulgrew, 45-54, Female\n",
-      "  Sheila Buckle, 75-84, Female\n",
+      "  Lisa Blazey, 35-44, Female\n",
       "  Jonathan Simpson, 35-44, Male\n",
-      "  Joven  Montuya, Under 16, Male\n",
-      "  Becky Pitt, 25-34, Female\n",
+      "  Aaron Paki, 45-54, Male\n",
+      "  Tim Searle, 45-54, Male\n",
+      "Male      60.0\n",
+      "Female    40.0\n",
+      "16-24    20.0\n",
+      "25-34     0.0\n",
+      "35-44    40.0\n",
+      "45-54    40.0\n",
+      "55-64     0.0\n",
+      "65-74     0.0\n",
+      "75-84     0.0\n",
+      "85+       0.0\n",
+      "\n",
+      "Group 1:\n",
+      "  Amy Burgess, 16-24, Female\n",
+      "  Kelly Mead, 35-44, Female\n",
+      "  Rob Porter, 35-44, Male\n",
+      "  Devon Gillam, 45-54, Male\n",
+      "  Ivan Cole, 45-54, Male\n",
+      "Male      60.0\n",
+      "Female    40.0\n",
+      "16-24    20.0\n",
+      "25-34     0.0\n",
+      "35-44    40.0\n",
+      "45-54    40.0\n",
+      "55-64     0.0\n",
+      "65-74     0.0\n",
+      "75-84     0.0\n",
+      "85+       0.0\n",
       "\n",
       "Group 2:\n",
-      "  Age Distribution:\n",
-      "    45-54: 2\n",
-      "    65-74: 2\n",
-      "    75-84: 2\n",
-      "    35-44: 2\n",
-      "    55-64: 2\n",
-      "    16-24: 1\n",
-      "    25-34: 1\n",
-      "  Gender Distribution:\n",
-      "    Female: 7\n",
-      "    Male: 5\n",
-      "  Devon Gillam, 45-54, Male\n",
-      "  Jan Hausman, 65-74, Female\n",
-      "  Andrew Webb, 75-84, Male\n",
-      "  Lisa Blazey, 35-44, Female\n",
-      "  Chas Bullock, 65-74, Male\n",
-      "  Wendy Pedersen, 55-64, Female\n",
-      "  Simon Hathway, 55-64, Male\n",
-      "  Amy Burgess, 16-24, Female\n",
+      "  Becky Pitt, 25-34, Female\n",
+      "  Darryl Forbes, 35-44, Male\n",
+      "  Lauren Bradley, 35-44, Female\n",
       "  kate  rhodes, 45-54, Female\n",
-      "  Joan Mitchell, 75-84, Female\n",
-      "  Adam Richardson, 35-44, Male\n",
-      "  Emma-Leigh Hodge, 25-34, Female\n",
+      "  Nicola Mulgrew, 45-54, Female\n",
+      "Female    80.0\n",
+      "Male      20.0\n",
+      "16-24     0.0\n",
+      "25-34    20.0\n",
+      "35-44    40.0\n",
+      "45-54    40.0\n",
+      "55-64     0.0\n",
+      "65-74     0.0\n",
+      "75-84     0.0\n",
+      "85+       0.0\n",
       "\n",
       "Group 3:\n",
-      "  Age Distribution:\n",
-      "    45-54: 2\n",
-      "    65-74: 2\n",
-      "    35-44: 2\n",
-      "    55-64: 1\n",
-      "  Gender Distribution:\n",
-      "    Female: 4\n",
-      "    Male: 3\n",
+      "  Emma-Leigh Hodge, 25-34, Female\n",
+      "  Adam Richardson, 35-44, Male\n",
       "  David Hodge, 45-54, Male\n",
-      "  Noel Rivett, 65-74, Female\n",
-      "  Kelly Mead, 35-44, Female\n",
-      "  Brian  Breen , 65-74, Male\n",
-      "  Liz Cooper, 55-64, Female\n",
       "  Lee Martin, 45-54, Female\n",
-      "  Rob Porter, 35-44, Male\n",
-      "\n",
-      "Group 4:\n",
-      "  Age Distribution:\n",
-      "    65-74: 2\n",
-      "    45-54: 1\n",
-      "    55-64: 1\n",
-      "    35-44: 1\n",
-      "  Gender Distribution:\n",
-      "    Male: 3\n",
-      "    Female: 2\n",
-      "  Aaron Paki, 45-54, Male\n",
-      "  Maria Tupou, 65-74, Female\n",
-      "  Ashley Fairbairn, 65-74, Male\n",
-      "  Tanya Trass, 55-64, Female\n",
-      "  Darryl Forbes, 35-44, Male\n",
-      "\n",
-      "Group 5:\n",
-      "  Age Distribution:\n",
-      "    65-74: 2\n",
-      "    45-54: 1\n",
-      "  Gender Distribution:\n",
-      "    Male: 2\n",
-      "    Female: 1\n",
-      "  Tim Searle, 45-54, Male\n",
-      "  Felicity  Turner, 65-74, Female\n",
-      "  Leonard Lorek, 65-74, Male\n",
-      "\n",
-      "Group 6:\n",
-      "  Age Distribution:\n",
-      "    65-74: 2\n",
-      "    45-54: 1\n",
-      "  Gender Distribution:\n",
-      "    Male: 2\n",
-      "    Female: 1\n",
-      "  Ivan Cole, 45-54, Male\n",
-      "  Joanne Percival, 65-74, Female\n",
-      "  Gordon Golem, 65-74, Male\n",
-      "\n",
-      "Group 7:\n",
-      "  Age Distribution:\n",
-      "    65-74: 2\n",
-      "  Gender Distribution:\n",
-      "    Female: 1\n",
-      "    Male: 1\n",
-      "  Christine Ralph, 65-74, Female\n",
-      "  stephen Anquetil, 65-74, Male\n",
-      "\n",
-      "Group 8:\n",
-      "  Age Distribution:\n",
-      "    65-74: 1\n",
-      "  Gender Distribution:\n",
-      "    Male: 1\n",
-      "  Justin Joseph, 65-74, Male\n",
-      "\n",
-      "Group 9:\n",
-      "  Age Distribution:\n",
-      "    65-74: 1\n",
-      "  Gender Distribution:\n",
-      "    Male: 1\n",
-      "  Lourens Strydom, 65-74, Male\n",
+      "  Ashok Harridaw, 45-54, Male\n",
+      "Male      60.0\n",
+      "Female    40.0\n",
+      "16-24     0.0\n",
+      "25-34    20.0\n",
+      "35-44    20.0\n",
+      "45-54    60.0\n",
+      "55-64     0.0\n",
+      "65-74     0.0\n",
+      "75-84     0.0\n",
+      "85+       0.0\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 52
   }
  ],
  "metadata": {
