Refactored for reusability and complete results

--- a/likert_ranking.ipynb
+++ b/likert_ranking.ipynb
@@ -15,44 +15,54 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "from enum import Enum\n",
     "\n",
-    "df = pd.read_csv('data/dashboard-export-02-51-am-2024-11-30.csv')\n",
-    "print(df.columns)\n",
+    "class Scale(Enum):\n",
+    "    LIKELY = ['Very unlikely ',\n",
+    "             'Unlikely ',\n",
+    "             'Neutral ',\n",
+    "             'Likely ',\n",
+    "             'Very likely ']\n",
+    "    IMPORTANT = ['Not at all important',\n",
+    "                 'Not important',\n",
+    "                 'Neutral',\n",
+    "                 'Important',\n",
+    "                 'Very important']\n",
+    "    SKILL = ['Very low',\n",
+    "             'Low',\n",
+    "             'Somewhat low',\n",
+    "             'Neutral',\n",
+    "             'Somewhat high',\n",
+    "             'High',\n",
+    "             'Very high']\n",
     "\n",
-    "likely_scale = ['Very unlikely ',\n",
-    "     'Unlikely ',\n",
-    "     'Neutral ',\n",
-    "     'Likely ',\n",
-    "     'Very likely ']\n",
+    "def setup_likert(df, start_column, end_column, scale):\n",
+    "    plot_likert.__internal__.BAR_LABEL_FORMAT = \"%.0f\"\n",
     "\n",
-    "important_scale = ['Not at all important', \n",
-    "                   'Not important',\n",
-    "                   'Neutral', \n",
-    "                   'Important',\n",
-    "                   'Very important']\n",
+    "    # Use .loc to slice the dataframe by column names\n",
+    "    ax = plot_likert.plot_likert(df.loc[:, start_column:end_column], scale.value, plot_percentage=True, bar_labels=True, bar_labels_color=\"snow\", colors=plot_likert.colors.default_with_darker_neutral);\n",
     "\n",
-    "plot_likert.__internal__.BAR_LABEL_FORMAT = \"%.0f\"\n",
+    "    return ax\n",
     "\n",
-    "# plot_likert.plot_likert(df['Q5 - If these types of technologies were made available to the community, how li...'], likely_scale, plot_percentage=True, bar_labels=True, bar_labels_color=\"snow\", colors=plot_likert.colors.default_with_darker_neutral);\n",
+    "def balanced_figure(df, start_column, end_column, scale):\n",
+    "    ax = setup_likert(df, start_column, end_column, scale)\n",
     "\n",
-    "# Define the column range using the start and end column names\n",
-    "start_column = 'Q7 - Technology should be accessible and help people feel included, safe, and co...'\n",
-    "end_column = 'Q11 - Technology should drive business growth and education opportunities, creati...'\n",
+    "    ax.set_xlim(left=-100, right=100)\n",
     "\n",
-    "# Use .loc to slice the dataframe by column names\n",
-    "ax = plot_likert.plot_likert(df.loc[:, start_column:end_column], important_scale, plot_percentage=True, bar_labels=True, bar_labels_color=\"snow\", colors=plot_likert.colors.default_with_darker_neutral);\n",
-    "        \n",
-    "# ax.set_xlim(left=-100, right=100)\n",
-    "# \n",
-    "# # Set custom x-ticks at specific intervals\n",
-    "# ticks = np.arange(-100, 101, 20)  # Example: ticks every 20 units\n",
-    "# ax.set_xticks(ticks)\n",
-    "# \n",
-    "# # Optional: Set custom tick labels (if you want to change the appearance of labels)\n",
-    "# tick_labels = [f'{tick}%' for tick in ticks]  # Label them as percentages\n",
-    "# ax.set_xticklabels(tick_labels)\n",
+    "    # Set custom x-ticks at specific intervals\n",
+    "    ticks = np.arange(-100, 101, 20)  # Example: ticks every 20 units\n",
+    "    ax.set_xticks(ticks)\n",
     "\n",
-    "plt.show()\n"
+    "    # Optional: Set custom tick labels (if you want to change the appearance of labels)\n",
+    "    tick_labels = [f'{tick}%' for tick in ticks]  # Label them as percentages\n",
+    "    ax.set_xticklabels(tick_labels)\n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "def unbalanced_figure(df, start_column, end_column, scale):\n",
+    "    setup_likert(df, start_column, end_column, scale)\n",
+    "\n",
+    "    plt.show()"
    ],
    "outputs": [
     {
