--- a/create_figures.ipynb
+++ b/create_figures.ipynb
@@ -6,16 +6,19 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-10T07:27:11.554807Z",
-     "start_time": "2024-12-10T07:27:11.536413Z"
+     "end_time": "2024-12-11T03:20:13.717608Z",
+     "start_time": "2024-12-11T03:20:13.506840Z"
     }
    },
    "source": [
-    "from word_cloud import visualise_column\n",
-    "from stacked_bars import display_bars, Scale\n",
+    "from word_cloud import visualise_column, visualise_ranked_columns\n",
+    "from bar_charts import stacked_bars, grouped_bars, Scale\n",
     "\n",
-    "import ipywidgets as widgets\n",
     "import pandas as pd\n",
+    "import warnings\n",
+    "\n",
+    "from bs4 import MarkupResemblesLocatorWarning\n",
+    "warnings.filterwarnings('ignore', category=MarkupResemblesLocatorWarning)\n",
     "\n",
     "def visualise_responses(age_brackets, gender):\n",
     "    df = pd.read_csv('data/all-responses.csv')\n",
@@ -30,24 +33,36 @@
     "    print(\"Technology would you like to see more of, and how likely are you to use them:\")\n",
     "    visualise_column(df, 'Q4 - What technology would you like to see more of in our community? *\\n\\nPlease t...')\n",
     "    columns = [\"Q5 - If these types of technologies were made available to the community, how li...\"]\n",
-    "    display_bars(df, columns, Scale.LIKELY)\n",
+    "    stacked_bars(df, columns, Scale.LIKELY)\n",
     "\n",
     "    print(\"How important are the following outcomes:\")\n",
     "    columns = ['Q7 - Technology should be accessible and help people feel included, safe, and co...',\n",
-    "           'Q8 - Technology should help preserve and protect our environment and make counci...',\n",
-    "           'Q9 - Technology should enable council to plan thriving town centres, resilient i...',\n",
-    "           'Q10 - Technology should make it easy to move around our city and use sustainable...',\n",
-    "           'Q11 - Technology should drive business growth and education opportunities, creati...']\n",
-    "    display_bars(df, columns, Scale.IMPORTANT)\n",
+    "       'Q8 - Technology should help preserve and protect our environment and make counci...',\n",
+    "       'Q9 - Technology should enable council to plan thriving town centres, resilient i...',\n",
+    "       'Q10 - Technology should make it easy to move around our city and use sustainable...',\n",
+    "       'Q11 - Technology should drive business growth and education opportunities, creati...']\n",
+    "    stacked_bars(df, columns, Scale.IMPORTANT)\n",
     "\n",
     "    print(\"How important that technology improves the following:\")\n",
-    "    columns = ['Q13 - Traffic congestion. *', 'Q14 - A revitalised city centre. *',\n",
-    "           'Q15 - Reliable and timely public transport. *',\n",
-    "           'Q16 - Public safety. *', 'Q17 - Visibility of available parking. *',\n",
-    "           'Q18 - Staying informed and providing feedback on council decisions. *']\n",
-    "    display_bars(df, columns, Scale.IMPORTANT)\n",
+    "    columns = ['Q13 - Traffic congestion. *',\n",
+    "       'Q14 - A revitalised city centre. *',\n",
+    "       'Q15 - Reliable and timely public transport. *',\n",
+    "       'Q16 - Public safety. *',\n",
+    "       'Q17 - Visibility of available parking. *',\n",
+    "       'Q18 - Staying informed and providing feedback on council decisions. *']\n",
+    "    stacked_bars(df, columns, Scale.IMPORTANT)\n",
     "\n",
-    "    # ranking\n",
+    "    print(\"Ranking of preferred improvements with technology:\")\n",
+    "    columns = ['Q21_1 - Roads, footpaths, and cycle ways. ',\n",
+    "       'Q21_4 - Rubbish and recycling services. ',\n",
+    "       'Q21_5 - Building and planning. ',\n",
+    "       'Q21_6 - Outdoor spaces, such as parks. ',\n",
+    "       'Q21_7 - Public facilities, such as community centres.  ',\n",
+    "       'Q21_8 - Drinking water, wastewater, and stormwater services. ',\n",
+    "       'Q21_9 - Business licensing and compliance. ',\n",
+    "       'Q21_10 - Community services, such as events. ']\n",
+    "    grouped_bars(df, columns)\n",
+    "    visualise_ranked_columns(df, columns)\n",
     "\n",
     "    print(\"Preventing use of technology:\")\n",
     "    visualise_column(df, \"Q22 - Is there anything preventing you from using technology in our community’s o...\")\n",
@@ -58,16 +73,16 @@
     "\n",
     "    print(\"Rate digital skills:\")\n",
     "    columns = [\"Q25 - How would you rate your digital skills when using community technology? *...\"]\n",
-    "    display_bars(df, columns, Scale.SKILL)"
+    "    stacked_bars(df, columns, Scale.SKILL)"
    ],
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T07:27:12.729828Z",
-     "start_time": "2024-12-10T07:27:11.622241Z"
+     "end_time": "2024-12-11T03:20:15.883013Z",
+     "start_time": "2024-12-11T03:20:13.733301Z"
     }
    },
    "cell_type": "code",
@@ -101,15 +116,15 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "ddfb7c4067c74361876f94445d620276"
+       "model_id": "50799f8fb40340599268445480179f5b"
       }
      },
-     "execution_count": 31,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 31
+   "execution_count": 2
   }
  ],
  "metadata": {
