ChatGPT thematic analysis test

--- a/create_figures.ipynb
+++ b/create_figures.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-11T03:20:13.717608Z",
-     "start_time": "2024-12-11T03:20:13.506840Z"
+     "end_time": "2024-12-11T03:58:50.411691Z",
+     "start_time": "2024-12-11T03:58:50.389065Z"
     }
    },
    "source": [
@@ -22,7 +22,7 @@
     "\n",
     "def visualise_responses(age_brackets, gender):\n",
     "    df = pd.read_csv('data/all-responses.csv')\n",
-    "    # print(df.columns)\n",
+    "    print(df.columns)\n",
     "\n",
     "    df = df[df['Q26 - Age: *'].isin(age_brackets)]\n",
     "    df = df[df['Q27 - Gender: *'].isin(gender)]\n",
@@ -76,13 +76,13 @@
     "    stacked_bars(df, columns, Scale.SKILL)"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T03:20:15.883013Z",
-     "start_time": "2024-12-11T03:20:13.733301Z"
+     "end_time": "2024-12-11T03:58:51.896486Z",
+     "start_time": "2024-12-11T03:58:50.411691Z"
     }
    },
    "cell_type": "code",
@@ -116,15 +116,15 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "50799f8fb40340599268445480179f5b"
+       "model_id": "48e1800911ad4d4cb9d6d6353ecd76ca"
       }
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 5
   }
  ],
  "metadata": {
