Complete survey visualisations

--- a/create_figures.ipynb
+++ b/create_figures.ipynb
@@ -6,11 +6,13 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-11T07:58:10.260665Z",
-     "start_time": "2024-12-11T07:58:08.544556Z"
+     "end_time": "2024-12-12T01:03:45.779425Z",
+     "start_time": "2024-12-12T01:03:30.203509Z"
     }
    },
    "source": [
+    "from IPython.core.display import Markdown\n",
+    "from language_processing import identify_themes\n",
     "from word_cloud import visualise_column, visualise_ranked_columns\n",
     "from bar_charts import stacked_bars, grouped_bars, Scale\n",
     "\n",
@@ -18,62 +20,89 @@
     "import warnings\n",
     "\n",
     "from bs4 import MarkupResemblesLocatorWarning\n",
-    "warnings.filterwarnings('ignore', category=MarkupResemblesLocatorWarning)\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "def visualise_responses(age_brackets, gender):\n",
     "    df = pd.read_csv('data/all-responses.csv')\n",
-    "    print(df.columns)\n",
+    "    # print(df.columns)\n",
     "\n",
     "    df = df[df['Q26 - Age: *'].isin(age_brackets)]\n",
     "    df = df[df['Q27 - Gender: *'].isin(gender)]\n",
     "\n",
-    "    print(\"Existing technology aware of:\")\n",
-    "    visualise_column(df, \"Q3 - We already have some council provided community technology in place. Which...\")\n",
+    "    def question_1():\n",
+    "        display(Markdown(\"## Existing technology aware of:\"))\n",
+    "        visualise_column(df, \"Q3 - We already have some council provided community technology in place. Which...\")\n",
     "\n",
-    "    print(\"Technology would you like to see more of, and how likely are you to use them:\")\n",
-    "    visualise_column(df, 'Q4 - What technology would you like to see more of in our community? *\\n\\nPlease t...')\n",
-    "    columns = [\"Q5 - If these types of technologies were made available to the community, how li...\"]\n",
-    "    stacked_bars(df, columns, Scale.LIKELY)\n",
+    "    def question_2():\n",
+    "        display(Markdown(\"## Technology would you like to see more of, and how likely are you to use them:\"))\n",
+    "        visualise_column(df, 'Q4 - What technology would you like to see more of in our community? *\\n\\nPlease t...')\n",
+    "        # identify_themes(df, 'Q4_11_TEXT - Other, please specify.')\n",
+    "        columns = [\"Q5 - If these types of technologies were made available to the community, how li...\"]\n",
+    "        stacked_bars(df, columns, Scale.LIKELY)\n",
     "\n",
-    "    print(\"How important are the following outcomes:\")\n",
-    "    columns = ['Q7 - Technology should be accessible and help people feel included, safe, and co...',\n",
-    "       'Q8 - Technology should help preserve and protect our environment and make counci...',\n",
-    "       'Q9 - Technology should enable council to plan thriving town centres, resilient i...',\n",
-    "       'Q10 - Technology should make it easy to move around our city and use sustainable...',\n",
-    "       'Q11 - Technology should drive business growth and education opportunities, creati...']\n",
-    "    stacked_bars(df, columns, Scale.IMPORTANT)\n",
+    "    def question_3():\n",
+    "        display(Markdown(\"## How important are the following outcomes:\"))\n",
+    "        columns = ['Q7 - Technology should be accessible and help people feel included, safe, and co...',\n",
+    "           'Q8 - Technology should help preserve and protect our environment and make counci...',\n",
+    "           'Q9 - Technology should enable council to plan thriving town centres, resilient i...',\n",
+    "           'Q10 - Technology should make it easy to move around our city and use sustainable...',\n",
+    "           'Q11 - Technology should drive business growth and education opportunities, creati...']\n",
+    "        stacked_bars(df, columns, Scale.IMPORTANT)\n",
     "\n",
-    "    print(\"How important that technology improves the following:\")\n",
-    "    columns = ['Q13 - Traffic congestion. *',\n",
-    "       'Q14 - A revitalised city centre. *',\n",
-    "       'Q15 - Reliable and timely public transport. *',\n",
-    "       'Q16 - Public safety. *',\n",
-    "       'Q17 - Visibility of available parking. *',\n",
-    "       'Q18 - Staying informed and providing feedback on council decisions. *']\n",
-    "    stacked_bars(df, columns, Scale.IMPORTANT)\n",
+    "    def question_4():\n",
+    "        display(Markdown(\"## How important that technology improves the following:\"))\n",
+    "        columns = ['Q13 - Traffic congestion. *',\n",
+    "           'Q14 - A revitalised city centre. *',\n",
+    "           'Q15 - Reliable and timely public transport. *',\n",
+    "           'Q16 - Public safety. *',\n",
+    "           'Q17 - Visibility of available parking. *',\n",
+    "           'Q18 - Staying informed and providing feedback on council decisions. *']\n",
+    "        stacked_bars(df, columns, Scale.IMPORTANT)\n",
+    "        # identify_themes(df, 'Q19 - Other, please specify')\n",
     "\n",
-    "    print(\"Ranking of preferred improvements with technology:\")\n",
-    "    columns = ['Q21_1 - Roads, footpaths, and cycle ways. ',\n",
-    "       'Q21_4 - Rubbish and recycling services. ',\n",
-    "       'Q21_5 - Building and planning. ',\n",
-    "       'Q21_6 - Outdoor spaces, such as parks. ',\n",
-    "       'Q21_7 - Public facilities, such as community centres.  ',\n",
-    "       'Q21_8 - Drinking water, wastewater, and stormwater services. ',\n",
-    "       'Q21_9 - Business licensing and compliance. ',\n",
-    "       'Q21_10 - Community services, such as events. ']\n",
-    "    grouped_bars(df, columns)\n",
-    "    visualise_ranked_columns(df, columns)\n",
+    "    def question_5():\n",
+    "        display(Markdown(\"## Ranking of preferred improvements with technology:\"))\n",
+    "        columns = ['Q21_1 - Roads, footpaths, and cycle ways. ',\n",
+    "           'Q21_4 - Rubbish and recycling services. ',\n",
+    "           'Q21_5 - Building and planning. ',\n",
+    "           'Q21_6 - Outdoor spaces, such as parks. ',\n",
+    "           'Q21_7 - Public facilities, such as community centres.  ',\n",
+    "           'Q21_8 - Drinking water, wastewater, and stormwater services. ',\n",
+    "           'Q21_9 - Business licensing and compliance. ',\n",
+    "           'Q21_10 - Community services, such as events. ']\n",
+    "        grouped_bars(df, columns)\n",
+    "        visualise_ranked_columns(df, columns)\n",
+    "        # identify_themes(df, 'Q21_11_TEXT - Other, please specify')\n",
     "\n",
-    "    print(\"Preventing use of technology:\")\n",
-    "    visualise_column(df, \"Q22 - Is there anything preventing you from using technology in our community’s o...\")\n",
+    "    def question_6():\n",
+    "        display(Markdown(\"## Preventing use of technology:\"))\n",
+    "        visualise_column(df, \"Q22 - Is there anything preventing you from using technology in our community’s o...\")\n",
+    "        # identify_themes(df, 'Q22_10_TEXT - Other, please specify.')\n",
     "\n",
-    "    # ideas and examples\n",
+    "    def question_7():\n",
+    "        display(Markdown(\"## Ideas and examples from other cities:\"))\n",
+    "        identify_themes(df, \"Q23 - Do you have any ideas for new technology or examples you\\'ve seen from other...\")\n",
     "\n",
-    "    # feedback about council or technology\n",
+    "    def question_8():\n",
+    "        display(Markdown(\"## Feedback about Council or technology:\"))\n",
+    "        identify_themes(df, \"Q24 - Do you have any other feedback or comments you would like to make about cou...\")\n",
     "\n",
-    "    print(\"Rate digital skills:\")\n",
-    "    columns = [\"Q25 - How would you rate your digital skills when using community technology? *...\"]\n",
-    "    stacked_bars(df, columns, Scale.SKILL)"
+    "    def question_9():\n",
+    "        display(Markdown(\"## Rate digital skills:\"))\n",
+    "        columns = [\"Q25 - How would you rate your digital skills when using community technology? *...\"]\n",
+    "        stacked_bars(df, columns, Scale.SKILL)\n",
+    "\n",
+    "    question_1()\n",
+    "    question_2()\n",
+    "    question_3()\n",
+    "    question_4()\n",
+    "    question_5()\n",
+    "    question_6()\n",
+    "    question_7()\n",
+    "    question_8()\n",
+    "    question_9()\n",
+    "\n",
+    "# visualise_responses(['Under 16', '16-24', '25-34', '35-44', '45-54', '55-64', '65-74', '75-84', '85+'], ['Male', 'Female', 'Prefer not to say', 'Other (please specify)', 'Non-binary'])"
    ],
    "outputs": [],
    "execution_count": 1
@@ -81,8 +110,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T07:58:13.882166Z",
-     "start_time": "2024-12-11T07:58:10.265825Z"
+     "end_time": "2024-12-12T01:04:06.677282Z",
+     "start_time": "2024-12-12T01:03:45.784431Z"
     }
    },
    "cell_type": "code",
@@ -116,7 +145,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "06910942e8ae4c6aa5da0987c47a8c2c"
+       "model_id": "d120c7483bf140d2b09d7dc0cc58bd9b"
       }
      },
      "execution_count": 2,
