--- a/word_cloud.ipynb
+++ b/word_cloud.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-02-15T09:51:35.438683Z",
-     "start_time": "2025-02-15T09:51:35.207126Z"
+     "end_time": "2025-02-16T02:04:53.801326Z",
+     "start_time": "2025-02-16T02:04:53.545411Z"
     }
    },
    "source": [
@@ -17,10 +17,7 @@
     "import circlify\n",
     "import textwrap\n",
     "\n",
-    "def visualise_column(df, column_name, pop_rep=False):\n",
-    "    \"\"\"\n",
-    "    Visualises a single column (with comma-separated values) as bubbles based on the frequency of the entries.\n",
-    "    \"\"\"\n",
+    "def calculate_counts(df, column_name, pop_rep=False):\n",
     "    global num_cols\n",
     "    num_cols = df.shape[0]\n",
     "\n",
@@ -41,6 +38,14 @@
     "\n",
     "        weighted_column_counts = weight_counts(age_column_counts, 'Q26 - Age: *')\n",
     "        column_counts = weighted_column_counts.groupby(column_name).sum()['count'].sort_values(ascending=False)\n",
+    "\n",
+    "    return column_counts\n",
+    "\n",
+    "def visualise_column(df, column_name, pop_rep=False):\n",
+    "    \"\"\"\n",
+    "    Visualises a single column (with comma-separated values) as bubbles based on the frequency of the entries.\n",
+    "    \"\"\"\n",
+    "    column_counts = calculate_counts(df, column_name, pop_rep=pop_rep)\n",
     "\n",
     "    # Generate the circles and plot\n",
     "    circles, labels, column_counts, ax = setup_plot('Response Distribution (%)', column_counts)\n",
@@ -229,17 +234,6 @@
      "output_type": "stream",
      "text": [
       "Q4 - What technology would you like to see more of in our community? *\\n\\nPlease t...\n",
-      "Environmental monitoring and emergency response systems.                                                               162\n",
-      "Digital community messaging and signage in outdoor spaces, such as what’s on listings, maps, transport information.    126\n",
-      "Interactive learning and technology for kids.                                                                          113\n",
-      "Free public Wi-Fi in other areas outside of the Mount and the city libraries.                                          112\n",
-      "Urban planning technology to view 3D city models and give feedback on the future of our city.                          101\n",
-      "Smart council infrastructure, such as smart bins.                                                                       95\n",
-      "Digital art, culture and history displays.                                                                              75\n",
-      "Technology that fosters community innovation, such as open data for research.                                           74\n",
-      "Other, please specify.                                                                                                  14\n",
-      "Name: count, dtype: int64\n",
-      "Q4 - What technology would you like to see more of in our community? *\\n\\nPlease t...\n",
       "Environmental monitoring and emergency response systems.                                                               157.246692\n",
       "Interactive learning and technology for kids.                                                                          118.363800\n",
       "Digital community messaging and signage in outdoor spaces, such as what’s on listings, maps, transport information.    115.866911\n",
@@ -263,7 +257,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 6
+   "execution_count": 8
   }
  ],
  "metadata": {
