--- a/bar_charts.ipynb
+++ b/bar_charts.ipynb
@@ -233,7 +233,7 @@
     "    fig = px.bar(\n",
     "        average_rankings_df,\n",
     "        x='Service',\n",
-    "        y='Average Ranking',\n",
+    "        y='Average Ranking (lower is better)',\n",
     "        labels={\n",
     "            \"Service\": \"Service\",\n",
     "            \"Average Ranking (lower is better)\": \"Average Ranking (lower is better)\",\n",
